电商领域：分页获取商品品牌
