# worldwide-framework/openapi-worldwide/src/main/resources/openapi/json/openapi.json
@@ -211,18 +211,6 @@
         "tags": [
           "mall/product/brand"
         ],
-        "parameters": [
-          {
-            "name": "Content-Type",
-            "in": "header",
-            "description": "",
-            "required": true,
-            "example": "application/json;charset:utf-8;",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "requestBody": {
           "content": {
             "application/json": {
